@@ -207,6 +207,10 @@ namespace aux {
 		// the key is an id that is used to identify the
 		// client with the tracker only.
 		std::uint32_t tracker_key = 0;
+
+		// set ot true when we receive an incoming connection from this listen
+		// socket
+		bool incoming_connection = false;
 	};
 
 		struct TORRENT_EXTRA_EXPORT listen_endpoint_t
